# wot-map-extractor

./: .gitignore  MapConfigurationController.py  MapImageCreator.py  MapInfoCreator.py  README.md  XmlUnpacker.py  exceptions.py  main.py  pyproject.toml  settings.py
assets/: cap.psd  events.psd  spawn.psd
utils/: maps_utils.py  string_utils.py
