[tool.poetry]
name = "wot-map-extractor"
version = "0.1.0"
description = ""
authors = ["synopss <synopss@outlook.com>"]
readme = "README.md"
packages = [{include = "wot_map_extractor"}]

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
